# actix-diesel-postgres

./: .env  Cargo.toml  diesel.toml  readme.md
migrations/2025-01-02-075024_create_users/: up.sql
migrations/2025-01-08-033540_create_users/: down.sql  up.sql
src/: actions.rs  db.rs  handlers.rs  lib.rs  main.rs  models.rs  schema.rs
