[package]
name = "actix-diesel-postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
diesel = { version = "2.2", features = ["postgres","r2d2","uuid"] }
uuid = { version = "1.3", features = ["v4","serde"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.135"